--- a/index.html
+++ b/index.html
@@ -13,7 +13,9 @@
       <button onclick="location.href='ingresos-gastos.html'">Ingresos y Gastos</button>
       <button onclick="location.href='presupuestos.html'">Presupuestos</button>
       <button onclick="location.href='visualizacion.html'">Visualización</button>
-      <button id="logoutBtn">Cerrar sesión</button>
+      <button id="logoutBtn" class="icono-boton">
+        <img src="svg/logout_24dp_000000_FILL1_wght400_GRAD0_opsz24.svg" alt="Cerrar sesión">
+      </button>
     </nav>
   </header>
 
