Página Inicio Link 2

--- a/index.html
+++ b/index.html
@@ -8,6 +8,9 @@
   <link rel="stylesheet" href="style.css" />
 </head>
 <body>
+  <script>
+    window.location.href = "inicio-sesion.html";
+  </script>
   <header>
     <h1 class="logo">FinanKey</h1>
     <nav>
