--- a/index.html
+++ b/index.html
@@ -8,20 +8,20 @@
 </head>
 <body>
   <script>
-    // Redirige solo la primera vez
-    if (!localStorage.getItem("redirigido")) {
-      localStorage.setItem("redirigido", "true");
+    const token = localStorage.getItem("token");
+    
+    if (!token && window.location.pathname.indexOf('inicio-sesion.html') === -1) {
       window.location.href = "inicio-sesion.html";
     }
   </script>
-
+  
   <header>
-    <h1 class="logo" onclick="location.href='index.html'" style="cursor:pointer;">FinanKey</h1>
+    <h1 class="logo" onclick="location.href='index.html'">FinanKey</h1>
     <nav>
       <button onclick="location.href='ingresos-gastos.html'">Ingresos y Gastos</button>
       <button onclick="location.href='presupuestos.html'">Presupuestos</button>
       <button onclick="location.href='visualizacion.html'">Visualización</button>
-      <button id="logoutBtn" class="icono-boton">
+      <button id="logoutBtn" class="icono-boton" onclick="cerrarSesion()">
         <img src="svg/logout_24dp_000000_FILL1_wght400_GRAD0_opsz24.svg" alt="Cerrar sesión">
       </button>
     </nav>
@@ -33,7 +33,7 @@
       <div class="index-texto">
         <h1>¡Gestiona las finanzas de tu empresa!</h1>
         <p>¿Tienes un emprendimiento o una empresa en crecimiento? Este espacio es para ti. Organiza tus finanzas con una herramienta simple, ágil y diseñada para acompañarte en cada paso. Todo el control, al alcance de tu mano.</p>
-        <h2>¿Qué puedes hacer acá?</h2>
+        <h2>¿Que puedes hacer acá?</h2>
         <p>Con esta herramienta podrás registrar fácilmente tus ingresos y gastos, llevar el control de tus presupuestos y visualizar tu balance general en gráficos claros y fáciles de entender. Todo en un solo lugar, diseñado para que tomes decisiones inteligentes y lleves tus finanzas al siguiente nivel.</p>
       </div>
     </section>
@@ -42,11 +42,15 @@
   <script>
     function cerrarSesion() {
       localStorage.removeItem("token");
-      localStorage.removeItem("redirigido");
       window.location.href = "inicio-sesion.html";
     }
-
-    document.getElementById("logoutBtn").addEventListener("click", cerrarSesion);
+    
+    document.addEventListener('DOMContentLoaded', function() {
+      const token = localStorage.getItem("token");
+      if (!token && window.location.pathname.indexOf('inicio-sesion.html') === -1) {
+        window.location.href = "inicio-sesion.html";
+      }
+    });
   </script>
 </body>
 </html>
